# living-world-survival

./: .dockerignore  .env.example  .env.rc.example  .gitattributes  .gitignore  .golangci.yml  .pre-commit-config.yaml  Makefile  README.md  README_backend.md  mise.toml
.github/workflows/: ci.yml  nightly.yml
assets-pipeline/: asset_spec.py  generate.py  pyproject.toml  validate.py
assets-pipeline/tests/: test_validate.py
docs/: 01_基本設計書_v0.2.1.md  02_MVP詳細設計書_v0.2.2.md
docs/prompts/story_0000/linux/: 03B_M0実装指示書_WSL2側_v0.1.md  story_0001-result.txt
docs/prompts/story_0001/linux/: 04B_M1完了レポート_WSL2側_v0.1.md  04B_M1実装指示書_WSL2側_v0.1.md  story_0001-result.txt
docs/prompts/story_0002/linux/: 05B_M2実装指示書_WSL2側_v0.1.md  M2B_E2E_smoke_evidence.md
infra/: docker-compose.rc.yml  docker-compose.yml
infra/nats/: nats.conf
production/session-state/: active.md
proto/: buf.gen.yaml  buf.yaml
proto/survival/v1/: ai.proto  auth.proto  common.proto  economy.proto  gameplay.proto  worlddata.proto  worldevent.proto
scripts/: ai_soak_smoke.ps1  assets.ps1  check_tools.sh  ci_assets.sh  ci_go.sh  ci_proto.sh  ci_python.sh  e2e_m2_smoke.sh  load_assert.py  load_test.sh  log_secret_scan.sh  migrate.sh  recovery_assert.py  recovery_test.sh  security_scan.sh  smoke.sh  soak.sh  soak_assert.py  stop_ds.sh  unity_build_client.ps1  unity_build_server.ps1  unity_import_assets.ps1  unity_m2_inventory_smoke_client.ps1  unity_test.ps1
services/api/: Dockerfile  go.mod  go.sum
services/api/data/: item_definitions.json
services/api/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_inventory_save.down.sql  0002_inventory_save.up.sql  0003_survival.down.sql  0003_survival.up.sql  0004_ai.down.sql  0004_ai.up.sql  0005_worldevent.down.sql  0005_worldevent.up.sql  0006_economy.down.sql  0006_economy.up.sql
services/auth/: Dockerfile  go.mod  go.sum
services/auth/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_auth_m1.down.sql  0002_auth_m1.up.sql
services/common/: go.mod  go.sum
services/common/obs/: grpc.go  http.go  http_test.go  id.go  log.go  log_test.go  metrics.go  pgx.go  pgx_test.go
services/common/ratelimit/: ratelimit.go  ratelimit_test.go
services/llm-worker/: Dockerfile  pyproject.toml
services/llm-worker/tests/: test_decision.py  test_event_director.py  test_integration.py  test_llm_decision.py  test_obs.py
services/llm-worker/worker/: __init__.py  candidates.py  decision.py  event_director.py  llm.py  main.py  obs.py  schemas.py
services/tools/loadgen/: actor.go  ds.go  go.mod  go.sum  main.go  player.go  stats.go
services/tools/recoverygen/: db.go  go.mod  go.sum  main.go  scenario1.go  scenario2.go  scenario3.go  scenario4.go  scenario5.go
services/worldstate/: Dockerfile  pyproject.toml
services/worldstate/app/: __init__.py  candidates.py  consumer.py  main.py  obs.py  rebuild.py  repo.py
services/worldstate/tests/: test_candidates.py  test_consumer.py  test_health.py  test_integration.py  test_rebuild.py  test_repo.py
unity/SurvivalWorld/: .gitignore  SurvivalWorld.slnx
unity/SurvivalWorld/Assets/: DefaultPrefabObjects.asset  NuGet.config  packages.config
unity/SurvivalWorld/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
(+250 files in other folders)
