[project]
name = "assets-pipeline"
version = "0.1.0"
description = "Blender asset generation & validation (MVP 15章)"
requires-python = ">=3.11"
# ランタイム依存なし（generate.py は Blender 同梱の bpy を使う）。
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
