[project]
name = "llm-worker"
version = "0.1.0"
description = "LLM worker (NATS consumer) — Decision / World Event Director with structured outputs"
requires-python = ">=3.11"
dependencies = [
    "nats-py>=2.7",
    "asyncpg>=0.29",
    # 実 LLM（Anthropic API・構造化出力）。LLM_MOCK=1 の経路は SDK 非依存で動く（3.7）。
    "anthropic>=0.40",
    "pydantic>=2.7",
    # /metrics の exposition（10B 3.5 / 第13章 R-PROM）。
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
